# dap-rs

./: .gitignore  Cargo.toml
bindings/dap-ffi/: Cargo.toml  Justfile  uniffi.toml
bindings/dap-ffi/src/: did_document.rs  jwk.rs  lib.rs
crates/dap/: Cargo.toml
crates/dap/src/: did_document.rs  did_web.rs  jwk.rs  lib.rs
