[package]
name = "dap-ffi"
version = "0.1.0"
edition = "2021"
publish = false

[lib]
name = "dap_ffi"
crate-type = ["lib", "cdylib", "staticlib"]

[dependencies]
dap = { path = "../../crates/dap" }
uniffi = { workspace = true, features = ["tokio"] }

[dev-dependencies]
uniffi = { workspace = true, features = ["bindgen-tests"] }