[package]
name = "dap"
version = "0.1.0"
edition = "2021"
description = "Rust implementation of the DAP protocol."
authors.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
base64.workspace = true
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
tokio.workspace = true

[dev-dependencies]
tokio = { version = "1.38.0", features = ["macros", "test-util"] }


[lib]
name = "dap"
path = "src/lib.rs"